gobmkida/c1/modify_stupid_eye_vital_point
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/modify_stupid_eye_vital_point/src/engine/owl.c:3246:28: error: use of undeclared identifier 'stones_on_board_stone_count_for_position'
v14 = *( int *)( ( char *)&stones_on_board_stone_count_for_position + v12); 
                           ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/modify_stupid_eye_vital_point/src/obj/1/owl.o] Error 1
